# ai-teacher-assistant-v2-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  authenticate.ipynb  main.py  pyproject.toml  test.py
curriculum_agent/: agent.py
curriculum_agent/tmp/curriculum_agent/: root_agent.yaml
src/agents/: __init__.py  curriculum_agent.py
src/config/: __init__.py  settings.py
src/prompts/: curriculum_architect.txt
src/schemas/: lesson_plan.py
src/tools/: __init__.py  context_cache.py  datastore_upload.py  search_tool.py
src/utils/: __init__.py  auth.py  logger.py
tests/: test_config.py  test_curriculum_agent.py
